...
    <string name="cd_find_in_page_previous">Previous match</string>
    <string name="cd_find_in_page_next">Next match</string>
    <string name="cd_find_in_page_close">Close find on page</string>

    <!-- Tabs -->
    <string name="new_tab_title">New tab</string>
    <string name="cd_new_tab">New tab</string>
    <plurals name="cd_open_tab_overview_count">
        <item quantity="one">Open tab overview, %1$d tab</item>
        <item quantity="other">Open tab overview, %1$d tabs</item>
    </plurals>
    <string name="cd_close_tab_overview">Close tab overview</string>
    <string name="cd_close_tab">Close tab</string>
    <string name="cd_minimize_fullscreen_video">Minimize video</string>
    <string name="cd_expand_fullscreen_video">Expand video</string>
    <string name="cd_close_fullscreen_video">Close video</string>
    <string name="cd_move_fullscreen_video">Move video</string>
    <string name="cd_close_named_tab">Close %1$s</string>
    <string name="action_switch_to_tab">Switch to tab</string>
    <string name="action_duplicate_tab">Duplicate tab</string>
    <string name="tab_actions_title">Tab options</string>
    <string name="tab_stacks_title">Candy Stacks</string>
    <string name="action_create_tab_stack">New stack</string>
    <string name="action_edit_tab_stack">Edit stack</string>
    <string name="action_save_tab_stack">Save stack</string>
...
